--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,18 @@
 body {
-    background-image: url('computacion.jpg'); /* Cambia la ruta */
+    background-image: url('computacio.jpg'); /* Cambia la ruta */
     background-size: cover; /* Ajusta la imagen para cubrir toda la pantalla */
     background-position: center; /* Centra la imagen */
     background-repeat: no-repeat; /* Evita que se repita */
   }
+#contenedor2{
+    margin-left: 170px;
+    margin-top: 50px;
+    padding: 100px;
 
-.contenedor{
-    justify-content: center; /* Centra horizontalmente */
-    align-items: center; /* Centra verticalmente */
-    height: 100vh; /* Ocupa toda la pantalla */
-    margin: 0;
-    padding: 220px 50px 20px 150px;
+}
+.contenedor_principal{
+    margin-left: 170px;
+   
 }
 
 h3{
